# asf_lifetime_cost_model

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
asf_lifetime_cost_model/: __init__.py
asf_lifetime_cost_model/analysis/: compute_scenarios_data.py  scenarios.py
asf_lifetime_cost_model/analysis/notebooks/: cost_computations_demo.py  cost_parity_analysis.py  data_getters_demo.py  lifetime_cost_calculator_demo.py  running_cost_demo.py  running_cost_dev.ipynb  target_price_ratio_analysis.py
asf_lifetime_cost_model/analysis/reviews/housing_surveys/: EHS_SHCS_process_pp4h.R  EHS_SHCS_process_v12.R  EHS_code_simplified.R  EHS_dwelling_distribution_QA_EL.R
asf_lifetime_cost_model/config/: base.yaml  logging.yaml  scenarios.py
asf_lifetime_cost_model/getters/: data_getters.py  getter_utils.py
asf_lifetime_cost_model/notebooks/: data_getters_demo.py
asf_lifetime_cost_model/pipeline/: cost_computations.py  lifetime_cost_calculator.py  maintenance_and_installation_costs.py  running_costs.py
