[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asf_lifetime_cost_model"
version = "0.1.0"
description = "Analytical model to estimate the lifetime cost of a heat pump and a gas boiler annually to 2035 under differing assumptions for upfront costs, running costs and financing."
authors = [{ name = "Nesta" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "asf-levies-model @ git+https://github.com/nestauk/asf_levies_model.git",
    "boto3>=1.39.15",
    "odfpy>=1.4.1",
    "pandas>=2.3.1",
    "pandera>=0.25.0",
    "python-calamine>=0.4.0",
    "requests>=2.32.4",
]

[tool.setuptools.packages.find]
include = ["asf_lifetime_cost_model*"]

[project.urls]
repository = "https://github.com/nestauk/asf_lifetime_cost_model"
issues = "https://github.com/nestauk/asf_lifetime_cost_model/issues"

[dependency-groups]
dev = ["ipykernel", "jupytext", "nbstripout", "ruff", "pre-commit"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear: Likely bugs
    "C",   # flake8-comprehensions and mccabe complexity
    "D",   # pydocstyle: Docstring conventions
    "E",   # pycodestyle: Errors (default)
    "F",   # pyflakes: Linter
    "I",   # isort
    "N",   # pep8-naming: Naming conventions
    "W",   # pycodestyle: Warnings (default)
]
ignore = [
    "D100", # Warns about missing module-level docstrings
    "S101", # Warns about assert being removed when compiled
]

[tool.ruff.lint.isort]
known-first-party = ["asf_lifetime_cost_model"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402", "D104"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.uv.sources]
asf-levies-model = { git = "https://github.com/nestauk/asf_levies_model.git" }
